--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "toolkit";
+@import "toastr";
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import "app";
 
