--- a/app/views/shared/_messages.html.erb
+++ b/app/views/shared/_messages.html.erb
@@ -1,12 +1,8 @@
-<!-- <div class="growl growl-static">
-  <div class="alert alert-dark alert-dismissable" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">×</span>
-    </button>
-    <strong>
-			<% each do |msg| %>
-    <strong> 
-    <%= notice %>
-		<%= alert %>
-  </div>
-</div> -->
+<% unless flash.empty? %>
+  <script type="text/javascript">
+      <% flash.each do |f| %>
+      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+        toastr['<%= type %>']('<%= f[1] %>')
+      <% end %>  
+  </script>
+<% end %>
