added figaro omniauth and facebook gems

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -33,7 +33,9 @@ header{
     }
 }
 
-
+.username:hover {
+  cursor: pointer;
+}
 
 // -------------------------------------------------------------------------
 
