--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -40,7 +40,7 @@
               <span class="icon icon-bell"></span>
             </a>
           </li>
-          <li><a data-toggle="popover" data-original-title="" title=""><%= current_user.name %><span class="caret"></span></a>
+          <li><a class="username" data-toggle="popover" data-original-title="" title=""><%= current_user.name %><span class="caret"></span></a>
           </li>
           <li>
               <button class="btn btn-default navbar-btn navbar-btn-avitar">
