added active admin gem

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
     <h1 class="text-head">Learn to code by cloning popular 
 startups like twitter, airbnb and more</h1>
     <h2><small>Join our community and become a web developer within months </small></h2>
-    <button type="button" class="btn btn-lg btn-primary">SIGN UP</button>
+    <%= link_to 'SIGN UP', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
   </div>
   </div>
   
