created Courses and Task Controllers, also gave styiling

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -37,6 +37,10 @@ header{
   cursor: pointer;
 }
 
+.panel-heading {
+  padding: 0;
+}
+
 // -------------------------------------------------------------------------
 
 /*
