--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-fixed-top app-navbar">
+<nav class="navbar navbar-inverse navbar app-navbar">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-main">
@@ -15,13 +15,13 @@
 
         <ul class="nav navbar-nav hidden-xs">
           <li>
-            <a href="#">Home</a>
+            <%= link_to 'Home', root_path %>
           </li>
           <li>
             <a href="#">About</a>
           </li>
           <li>
-            <a href="#">Courses</a>
+            <%= link_to 'Courses', courses_path %>
           </li>
           <li>
             <a href="#">Pricing</a>
