added red carpet and coderay gems

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -40,7 +40,7 @@
 					</tr>
 					<tr>
 						<td>Skill Level:</td>
-						<td><strong><%= @task.tag %></strong></td>
+						<td><strong>Begginer</strong></td>
 					</tr>
 					<tr>
 						<td>Lenguage:</td>
