--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -41,6 +41,22 @@ header{
   padding: 0;
 }
 
+.navbar {
+   border-radius: 0px; 
+}
+
+.list-group-item:first-child {
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+  }
+
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+    z-index: 2;
+    color: #5f5f5f;
+    background-color: rgb(212, 229, 244);
+    border-color: rgba(48, 151, 209, 0);
+    font-weight: 700;
+}  
 // -------------------------------------------------------------------------
 
 /*
