added videos for testing

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,16 +15,18 @@
 					<% end %>
 				</div>
 		</div>
-		<div class="col-md-9">
-			<h2><small><%= @task.title %></small></h2>
-				<div>
-					<%= @task.video %>
-				</div>
+		<div class="container-fluid">
+			<div class="col-md-9">
+				<h2><small><%= @task.title %></small></h2>
+				
+				<script charset="ISO-8859-1" src="//fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_<%= @task.video %> seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
+
 				<hr>
 				<h2><small>Teacher's Notes</small></h2>
 				<p><%= markdown(@task.note) %></p>
 		</div>
 	</div>
-
+		</div>
+		
 
 
