--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container-narrow">
     <h1 class="text-head">Learn to code by cloning popular 
 startups like twitter, airbnb and more</h1>
-    <h2><small>Join our community and become a web developer within months </small></h2>
+    <h2><small>Join <%= @users %> other students and learn to create real apps</small></h2>
     <%= link_to 'SIGN UP', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
   </div>
   </div>
