--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -50,13 +50,18 @@ header{
     border-top-left-radius: 0px;
   }
 
-.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+.list-group-item.active, .list-group-item.active:hover {
     z-index: 2;
     color: #5f5f5f;
     background-color: rgb(212, 229, 244);
     border-color: rgba(48, 151, 209, 0);
     font-weight: 700;
 }  
+
+.list-group-item.active:focus {
+  color: rgba(48, 151, 209, 0);
+}
+
 // -------------------------------------------------------------------------
 
 /*
