--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,43 @@
 <%= render partial: "shared/messages" %>
 <%= yield %>
 
+<script>
+	$('[data-toggle="popover"]').popover({
+    template: '<div class="popover" role="tooltip"><div class="arrow"></div><div class="popover-content p-x-0"></div></div>',
+    title: '',
+    html: true,
+    trigger: 'manual',
+    placement:'bottom',
+    viewport: {
+      selector: 'body',
+      padding: getRight()
+    },
+    content: function () {
+      var $nav = $('.app-navbar .navbar-nav:last-child').clone()
+      return '<div class="nav nav-stacked" style="width: 200px">' + $nav.html() + '</div>'
+    }
+  })
+
+  $('[data-toggle="popover"]').on('click', function (e) {
+    e.stopPropagation()
+
+    if ($('[data-toggle="popover"]').data('bs.popover').tip().hasClass('in')) {
+      $('[data-toggle="popover"]').popover('hide')
+      $(document).off('click.app.popover')
+
+    } else {
+      $('[data-toggle="popover"]').popover('show')
+
+      setTimeout(function () {
+        $(document).one('click.app.popover', function () {
+          $('[data-toggle="popover"]').popover('hide')
+        })
+      }, 1)
+    }
+  })
+
+});
+</script>
+
 </body>
 </html>
