--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,18 +5,18 @@
 		<div class="row">
 	  <% @courses.each do |course| %>
 	    	<div class="col-md-3">
+	    	 <%= link_to course, class: 'panel-link' do %>
 	    		<div class="panel panel-default panel-profile">
-		        <div class="panel-heading"><%= image_tag course.image, class: 'img-responsive' %></div>
+		        <div class="panel-heading" style="background:url(<%= course.image %>) no-repeat center; background-size: cover;"></div>    
 		        <div class="panel-body text-center">
 		          <h5 class="panel-title"><%= course.name %></h5>
 		          <p class="m-b-md"><%= course.content %></p>
-		          <%= link_to course do %>
 			          <button class="btn btn-primary-outline btn-sm">
-			             Learn More
+			             Course Details
 			          </button>
-		          <% end %>
 		        </div>
 		      </div>
+		    <% end %>
 		    </div>
     <% end %>
   </div>
