--- a/app/views/courses/my_courses.erb
+++ b/app/views/courses/my_courses.erb
@@ -22,7 +22,7 @@
 	    <% end %>
 		<% else %>
 			<p>You don't have any courses</p>
-			<%= link_to 'Search Courses', my_courses_path, :class => 'class' %>
+			<%= link_to 'Search Courses', courses_path %>
 		<% end %>
 	  
   </div>
